# HTTP-from-scratch

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.org  shell.nix
HTTP-lib/: CMakeLists.txt
HTTP-lib/src/: http.h
HTTP-lib/src/core/: http_server.c  http_server.h  socket.c  socket.h  string.c  string.h  type.h
WebServer/: CMakeLists.txt
WebServer/src/: main.c
root/: index.html
src/: const_definitions.h  error.h  http.h  http_server.c  http_server.h  http_version.h  listener.cpp  listener.h  main.c  main.cpp  method.cpp  method.h  request.cpp  request.h  response.cpp  response.h  send.cpp  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h
